syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.file.rpc.container";
option java_outer_classname = "ContainerProtos";

message ContainerInfo {
 string locator = 1;
 string container_id = 2;
 string source = 3;
 int64 serial = 4;

 int32 used_blocks = 5;
 int32 block_size = 6;
 int32 limit_mbs = 7;
 int32 limit_blocks = 8;
}

message ContainerStatusRequest {
  string file_server = 1;
}

message ContainerStatusResponse {
  repeated ContainerInfo infos = 1;
}

service ContainerStatusService {
  rpc getContainerInfo (ContainerStatusRequest) returns (ContainerStatusResponse);
}